TNJ-9: add auth functionality

--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,9 @@
 PORT=8008
 POSTGRES_HOST=localhost
 POSTGRES_USER=root
-POSTGRES_DB=lumos
+POSTGRES_DB=task_ninja
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
 PRIVATE_KEY=SECRET
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin123
