add gmail (test_01)

--- a/.development.env
+++ b/.development.env
@@ -7,3 +7,6 @@ POSTGRES_PORT=5432
 PRIVATE_KEY=SECRET
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin123
+GOOGLE_CLIENT_ID=94071216195-vmbnec9gpooapr575vhgn6lmt76e3qhm.apps.googleusercontent.com
+GOOGLE_CALLBACK_URL=https://task-ninja-back.herokuapp.com/auth/google/callback
+
