TNJ-18: add registration via google account

--- a/.development.env
+++ b/.development.env
@@ -7,3 +7,4 @@ POSTGRES_PORT=5432
 PRIVATE_KEY=SECRET
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin123
+GOOGLE_CLIENT_ID=243640251408-mpcfflrps42deg5sdpcig4grpl4vs3p0.apps.googleusercontent.com
